--- a/client/src/app/auth/login/login.component.css
+++ b/client/src/app/auth/login/login.component.css
@@ -1,15 +1,15 @@
 .container {
   display: flex;
-  flex-direction: column;
   justify-content: center;
-  margin: 50px 36% 35% 36%;
-  /* background-color: white;
-  border-radius: 15px;
-  box-shadow: 2px 5px 13px 5px #000000ad, 8px -15px 31px -12px rgb(0 0 0 / 0%); */
+  margin-top: 160px;
+}
+
+.login-container {
+  max-width: 500px;
   color: white;
   background: #526081;
-  border-radius: 15px;
   box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+  border-radius: 15px;
 }
 
 form {
@@ -71,7 +71,7 @@ input:focus {
 }
 
 ::placeholder {
-  color: white;
+  color: rgb(170, 170, 170);
 }
 
 input:-webkit-autofill,
