--- a/client/src/app/shared/notification/notification.component.css
+++ b/client/src/app/shared/notification/notification.component.css
@@ -3,7 +3,7 @@
   flex-direction: row;
   text-align: center;
   color: white;
-  margin: 0 35%;
+  margin: 60px 35%;
   padding: 10px 5px;
   border-radius: 8px;
   justify-content: space-between;
