--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -1,13 +1,12 @@
-
-
-* {
+*,
+html {
     margin: 0;
     padding: 0;
     font-family: 'Roboto', sans-serif;
 }
 
-body {
-    /* background-color: #4F535C; */
+body,
+html {
     background: no-repeat;
     background: linear-gradient(#0F131C, #450009);
     background-attachment: fixed;
