--- a/client/src/app/coins-view/global-data/global-data.component.css
+++ b/client/src/app/coins-view/global-data/global-data.component.css
@@ -1,6 +1,8 @@
 .global-data-container {
   display: flex;
   flex-direction: row;
+  align-self: flex-end;
+  align-content: flex-start;
   justify-content: space-evenly;
   color: white;
 }
