--- a/client/src/app/shared/header/header.component.html
+++ b/client/src/app/shared/header/header.component.html
@@ -2,20 +2,20 @@
 	<nav>
 		<ul>
 			<div class="left-container">
-				<li class="logo"><a routerLink="/home"><img src="/assets/logo.png" alt="logo"></a></li>
-				<li class="user" *ngIf="hasUser">
-					<p>Welcome {{username}}</p>
+				<li class="logo"><a routerLink="/home"><img src="/assets/logo-white.png" alt="logo"></a></li>
+				<li class="user" *ngIf="user">
+					<p>Welcome {{user.email || ''}}</p>
 				</li>
 			</div>
 			<div class="right-container">
 				<li><a routerLink="/coins/top100">Top 100</a></li>
 				<li><a routerLink="/coins/new-coins">New Coins</a></li>
 				<li><a routerLink="/converter">Crypto Converter</a></li>
-				<div *ngIf="!hasUser" class="guestContainer">
+				<div *ngIf="!user" class="guestContainer">
 					<li><a routerLink="/auth/login">Login</a></li>
 					<li><a routerLink="/auth/register">Register</a></li>
 				</div>
-				<div *ngIf="hasUser" class="userContainer">
+				<div *ngIf="user" class="userContainer">
 					<li><a routerLink="/portfolio">Portfolio</a></li>
 					<li><a (click)="onLogout()">Logout</a></li>
 				</div>
