--- a/client/src/app/home/crypto-card/crypto-card.component.css
+++ b/client/src/app/home/crypto-card/crypto-card.component.css
@@ -2,26 +2,29 @@
   display: flex;
   flex-direction: column;
   margin: 25px;
-  border-radius: 15px;
-  background-color: #526081;
+  background: rgba(102, 102, 102, 0.4);
+  backdrop-filter: blur(6px);
+  -webkit-backdrop-filter: blur(6px);
+  border-radius: 10px;
   color: white;
   box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
   padding: 8px;
   width: 200px;
 }
 
-.card-box:hover {
-  box-shadow: rgba(240, 46, 170, 0.4) 0px 5px, rgba(240, 46, 170, 0.3) 0px 10px, rgba(240, 46, 170, 0.2) 0px 15px, rgba(240, 46, 170, 0.1) 0px 20px, rgba(240, 46, 170, 0.05) 0px 25px;
-  /* box-shadow: rgba(88, 88, 88, 0.25) 0px 54px 55px, rgba(88, 88, 88, 0.12) 0px -12px 30px, rgba(88, 88, 88, 0.12) 0px 4px 6px, rgba(88, 88, 88, 0.17) 0px 12px 13px, rgba(88, 88, 88, 0.09) 0px -3px 5px; */
-}
-
 .logo-container {
   display: flex;
-  justify-content: flex-end;
+  justify-content: space-evenly;
+  padding: 20px 0;
+}
+
+.crypto-title {
+  text-align: center;
+  padding-top: 15px;
+  color: white;
 }
 
 img {
-  margin: 10px 10px 0px 0px;
   width: 50px;
 }
 
@@ -29,10 +32,9 @@ img {
   display: flex;
   flex-direction: column;
   padding: 10px;
-  padding-top: 0;
-  padding-bottom: 2px;
   margin-bottom: 8px;
-  border-bottom: #FFCC66 solid 1px;
+  border-top: white solid 1px;
+  border-bottom: white solid 1px;
 }
 
 .text-center p {
@@ -42,10 +44,8 @@ img {
   margin-bottom: 5px;
 }
 
-.crypto-title {
-  text-align: left;
-  color: #FFCC66;
-  margin-bottom: 18px;
+.label {
+  color: #bbbbbb;
 }
 
 .data-buttons {
@@ -67,9 +67,5 @@ img {
 
   padding: 8px 2px;
   border-radius: 10px;
-  background-color: #84000E;
-}
-
-.label {
-  color: #1b1b1b;
+  background-color: #757575;
 }
