--- a/client/src/app/home/home.component.css
+++ b/client/src/app/home/home.component.css
@@ -1,15 +1,15 @@
 h1 {
-    margin: 300px 100px 200px 100px;
-    text-align: center;
-    color: white;
-    font-family: 'Montserrat';
-    font-weight: 200;
-    font-size: 90px;
+  margin: 300px 100px 200px 100px;
+  text-align: center;
+  color: white;
+  font-family: 'Montserrat';
+  font-weight: 200;
+  font-size: 90px;
 }
 
 .container {
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-end;
-    margin: 0px 7%;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  margin: 0px 7%;
 }
