--- a/client/src/app/auth/register/register.component.html
+++ b/client/src/app/auth/register/register.component.html
@@ -11,6 +11,7 @@
         <input id="email" type="text" placeholder="Enter Email" formControlName="email">
         <div class="input-icon"></div>
       </div>
+      <label for="email">Username</label>
       <div class="input">
         <i class="input-icon fa-solid fa-at"></i>
         <input id="username" type="text" placeholder="Enter Username" formControlName="username">
