--- a/client/src/app/coins-view/top-hundred/top-hundred.component.css
+++ b/client/src/app/coins-view/top-hundred/top-hundred.component.css
@@ -7,12 +7,11 @@
   display: flex;
   flex-direction: column;
   padding: 25px;
-  background: #526081;
-  border-radius: 15px;
+  background: rgba(102, 102, 102, 0.4);
+  backdrop-filter: blur(6px);
+  -webkit-backdrop-filter: blur(6px);
+  border-radius: 10px;
   box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
-  /* border: 1px solid white;
-  border-radius: 15px;
-  background: white; */
 }
 
 h1 {
