--- a/client/src/app/converter-view/crypto-converter/crypto-converter.component.css
+++ b/client/src/app/converter-view/crypto-converter/crypto-converter.component.css
@@ -1,5 +1,5 @@
 .container {
-  padding: 50px 10% 0 10%;
+  padding: 150px 10% 0 10%;
 }
 
 .converter {
@@ -13,10 +13,12 @@ form {
   flex-direction: column;
   justify-content: center;
   padding: 25px;
-  border-radius: 15px;
+  background: rgba(102, 102, 102, 0.4);
+  backdrop-filter: blur(6px);
+  -webkit-backdrop-filter: blur(6px);
+  border-radius: 10px;
   box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
   color: white;
-  background: #526081;
 }
 
 .title {
@@ -51,7 +53,10 @@ h1 {
 input {
   color: white;
   justify-content: center;
-  background: #526081;
+  background: rgba(102, 102, 102, 0.4);
+  backdrop-filter: blur(6px);
+  -webkit-backdrop-filter: blur(6px);
+  border-radius: 10px;
   text-align: center;
   border: none;
 }
