--- a/client/src/app/home/home.component.html
+++ b/client/src/app/home/home.component.html
@@ -1,4 +1,4 @@
 <h1>Track your crypto gains!</h1>
 <div class="container">
-  <app-crypto-card *ngFor="let card of cards" [card]="card"></app-crypto-card>
+  <app-crypto-card *ngFor="let card of topThreeCards" [card]="card"></app-crypto-card>
 </div>
