--- a/client/src/app/converter-view/crypto-converter/crypto-converter.component.css
+++ b/client/src/app/converter-view/crypto-converter/crypto-converter.component.css
@@ -1,5 +1,5 @@
 .container {
-  padding: 150px 10% 0 10%;
+  padding: 180px 10% 0 10%;
 }
 
 .converter {
@@ -27,9 +27,9 @@ form {
 }
 
 h1 {
-  justify-content: center;
-  padding: 50px 0px 50px 0px;
-  text-decoration: underline;
+  text-align: center;
+  font-weight: 300;
+  padding: 30px 0px 50px 0px;
 }
 
 .top-row {
@@ -62,7 +62,7 @@ input {
 }
 
 ::placeholder {
-  color: white;
+  color: #a8a8a8;
 }
 
 input:focus {
@@ -95,8 +95,8 @@ input:focus {
 .button {
   width: 100px;
   height: 35px;
-  background: rgb(198, 101, 199);
-  background: linear-gradient(90deg, #8B0014, #33008B 100%);
+  background-color: #00DBDE;
+  background-image: linear-gradient(90deg, #00DBDE 0%, #FC00FF 100%);
   border: none;
   border-radius: 10px;
   color: white;
@@ -133,9 +133,9 @@ input:focus {
   overflow: auto;
   box-shadow: 0px 10px 10px 0px rgba(0, 0, 0, 0.712);
   background-color: white;
-  border-radius: 6px;
+  border-radius: 4px;
   margin-top: 27px;
-
+  z-index: 1;
 }
 
 .menu:hover .menu-content {
@@ -145,7 +145,7 @@ input:focus {
 
 .menu-content button {
   display: block;
-  background: #526081;
+  background: rgb(102, 102, 102);
   color: #ffffff;
   padding: 5px;
   text-decoration: none;
@@ -154,9 +154,27 @@ input:focus {
 
 .menu-content button:hover {
   color: #FFFFFF;
-  background-color: #813F46;
+  background-color: #00DBDE;
+  background-image: linear-gradient(90deg, #00DBDE 0%, #FC00FF 100%);
 }
 
 button:disabled {
   cursor: not-allowed
+}
+
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+::-webkit-scrollbar-track {
+  border-radius: 4px;
+  background: #f1f1f1;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #888;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
 }
