--- a/client/src/app/converter-view/crypto-converter/crypto-converter.component.html
+++ b/client/src/app/converter-view/crypto-converter/crypto-converter.component.html
@@ -5,7 +5,7 @@
       <div class="top-row">
         <div class="input">
           <i class="fa-solid fa-circle-dollar-to-slot"></i>
-          <input type="text" placeholder="Enter amount" formControlName="amount">
+          <input type="text" placeholder="Enter amount" formControlName="amount" (keyup)="setAmount()">
           <img src="" alt="" class="input-icon">
         </div>
       </div>
@@ -46,10 +46,23 @@
             class="fa-solid fa-1x fa-money-bill-transfer"></i> Convert</button>
       </div>
       <div class="output">
-        <!-- <h4 class="output-field" *ngIf="result">{{ result.amount }} {{ result.name }} ({{ result.symbol }}) =
-          {{ result.quote[toId].price | number:'1.2-2' }} {{ fiatMapValue?.name }} "{{ fiatMapValue?.sign }}"
-          ({{fiatMapValue?.symbol}})
-        </h4> -->
+        <h4 class="output-field" *ngIf= "result">
+          {{ result.amount }} 
+          {{ result.name }} 
+          ({{ result.symbol }}) =
+          {{ result.quote[state.to!.id].price | number:'1.2-2' }} 
+          {{ state.to!.name }} 
+          "{{ state.to!.sign }}"
+          ({{ state.to!.symbol }})
+
+          <!-- {{ result.amount }} 
+            {{ result.name }} 
+            ({{ result.symbol }}) =
+            {{ result.quote[toId].price | number:'1.2-2' }} 
+            {{ fiatMapValue?.name }} "{{ fiatMapValue?.sign }}"
+            ({{fiatMapValue?.symbol}})-->
+
+        </h4>
       </div>
     </form>
   </div>
