--- a/client/src/app/portfolio-view/portfolio-table/portfolio-table.component.css
+++ b/client/src/app/portfolio-view/portfolio-table/portfolio-table.component.css
@@ -2,12 +2,11 @@
   display: flex;
   flex-direction: column;
   padding: 25px;
-  background: #526081;
-  border-radius: 15px;
+  background: rgba(102, 102, 102, 0.4);
+  backdrop-filter: blur(6px);
+  -webkit-backdrop-filter: blur(6px);
+  border-radius: 10px;
   box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
-  /* border: 1px solid white;
-  border-radius: 15px;
-  background: white; */
 }
 
 .title {
@@ -19,12 +18,12 @@
 
 h1 {
   text-align: center;
-  text-decoration: underline;
+  font-weight: 300;
 }
 
 button {
-  background: rgb(198, 101, 199);
-  background: linear-gradient(90deg, #8B0014, #33008B 100%);
+  background-color: #00DBDE;
+  background-image: linear-gradient(90deg, #00DBDE 0%, #FC00FF 100%);
   border: none;
   border-radius: 10px;
   padding: 10px 5%;
