--- a/client/src/app/shared/header/header.component.html
+++ b/client/src/app/shared/header/header.component.html
@@ -4,7 +4,7 @@
 			<div class="left-container">
 				<li class="logo"><a routerLink="/home"><img src="/assets/logo-white.png" alt="logo"></a></li>
 				<li class="user" *ngIf="user">
-					<p>Welcome {{user.email || ''}}</p>
+					<p>Welcome {{ user.username }}</p>
 				</li>
 			</div>
 			<div class="right-container">
