--- a/client/src/app/portfolio-view/portfolio/portfolio.component.css
+++ b/client/src/app/portfolio-view/portfolio/portfolio.component.css
@@ -80,3 +80,34 @@ tr {
   width: 20px;
   text-align: left;
 }
+
+.right-title {
+  display: flex;
+  flex-direction: column;
+}
+
+button {
+  background-color: #00DBDE;
+  background-image: linear-gradient(90deg, #00DBDE 0%, #FC00FF 100%);
+  border: none;
+  border-radius: 10px;
+  padding: 10px 5%;
+  font-size: large;
+  color: white;
+  cursor: pointer;
+  margin-top: 15px;
+}
+
+.modal {
+  display: flex;
+  justify-content: center;
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgb(0, 0, 0);
+  background-color: rgba(0, 0, 0, 0.4);
+}
