--- a/client/src/app/portfolio-view/add-coin-modal/add-coin-modal.component.html
+++ b/client/src/app/portfolio-view/add-coin-modal/add-coin-modal.component.html
@@ -1,40 +1,35 @@
 <div class="modal">
   <form [formGroup]="addCoinForm" (ngSubmit)="onSubmit()">
     <h1 class="title">Add Transaction</h1>
-
     <label for="coinId">Coin</label>
-    <span class="error" *ngIf="!addCoinForm.get('coinId')?.valid && addCoinForm.get('coinId')?.touched">Please select a coin!</span>
+    <span class="error" *ngIf="!addCoinForm.get('coinId')?.valid && addCoinForm.get('coinId')?.touched">Please select a
+      coin!</span>
     <div class="input-container">
       <!-- <input class="input" id="coin" placeholder="Bitcoin" formControlName="coin" type="text"> -->
       <div class="menu">
-        <div class="input-dropdown">
-          <input (input)="filter(input.value)" 
-          autocomplete="off" 
-          #input 
-          class="input" 
-          id="coinId" 
-          placeholder="Bitcoin" 
-          formControlName="coinId" 
-          type="text" 
-          [value]="selectedCoinName ? selectedCoinName : ''">
+        <!-- <div class="input-dropdown">
+          <input (input)="filter(input.value)" autocomplete="off" #input class="input" id="coinId" placeholder="Bitcoin"
+            formControlName="coinId" type="text" [value]="selectedCoinName ? selectedCoinName : ''">
           <div class="menu-content" [class.on]="resultSorted">
-            <button type="button" *ngFor="let coin of resultSorted"
-            (click)="setCoin(coin)">
+            <button type="button" *ngFor="let coin of resultSorted" (click)="setCoin(coin)">
               {{coin.name}} - {{coin.symbol | uppercase}}</button>
           </div>
-        </div>
+        </div> -->
       </div>
     </div>
-
     <label for="coinPrice">Price per coin</label>
-    <span class="error" *ngIf="!addCoinForm.get('coinPrice')?.valid && addCoinForm.get('coinPrice')?.touched">Please enter a price!</span>
+    <span class="error" *ngIf="!addCoinForm.get('coinPrice')?.valid && addCoinForm.get('coinPrice')?.touched">Please
+      enter a price!</span>
     <div class="input-container">
-      <input class="input" #coinPrice id="coinPrice" placeholder="Enter bought price" formControlName="coinPrice" type="number">
+      <input class="input" #coinPrice id="coinPrice" placeholder="Enter bought price" formControlName="coinPrice"
+        type="number">
     </div>
     <label for="quantity">Quantity</label>
-    <span class="error" *ngIf="!addCoinForm.get('quantity')?.valid && addCoinForm.get('quantity')?.touched">Please enter quantity!</span>
+    <span class="error" *ngIf="!addCoinForm.get('quantity')?.valid && addCoinForm.get('quantity')?.touched">Please enter
+      quantity!</span>
     <div class="input-container">
-      <input class="input" #quantity id="quantity" placeholder="Hou much do you own" formControlName="quantity" type="number">
+      <input class="input" #quantity id="quantity" placeholder="Hou much do you own" formControlName="quantity"
+        type="number">
     </div>
     <label for="quantity">Total Spent</label>
     <div class="input-container">
