--- a/client/src/app/portfolio-view/add-coin-modal/add-coin-modal.component.css
+++ b/client/src/app/portfolio-view/add-coin-modal/add-coin-modal.component.css
@@ -122,7 +122,7 @@ input::-webkit-inner-spin-button {
   box-shadow: 0px 10px 10px 0px rgba(0, 0, 0, 0.712);
   background-color: white;
   border-radius: 6px;
-  /* margin-top: 5px; */
+  z-index: 1;
 }
 
 .on {
@@ -130,15 +130,9 @@ input::-webkit-inner-spin-button {
   flex-direction: column;
 }
 
-/* 
-.menu:focus .menu-content {
-  display: flex;
-  flex-direction: column;
-} */
-
 .menu-content button {
   display: block;
-  background: #526081;
+  background: rgb(102, 102, 102);
   color: #ffffff;
   padding: 5px;
   text-decoration: none;
@@ -147,7 +141,8 @@ input::-webkit-inner-spin-button {
 
 .menu-content button:hover {
   color: #FFFFFF;
-  background-color: #813F46;
+  background-color: #00DBDE;
+  background-image: linear-gradient(90deg, #00DBDE 0%, #FC00FF 100%);
 }
 
 .error {
@@ -159,4 +154,21 @@ input::-webkit-inner-spin-button {
 
 button:disabled {
   cursor: not-allowed
+}
+
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+::-webkit-scrollbar-track {
+  border-radius: 4px;
+  background: #f1f1f1;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #888;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
 }
