--- a/client/src/app/portfolio-view/portfolio/portfolio.component.css
+++ b/client/src/app/portfolio-view/portfolio/portfolio.component.css
@@ -1,8 +1,9 @@
 .container {
   margin: 150px 50px;
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   justify-content: center;
+  align-items: center;
 }
 
 .card {
@@ -58,20 +59,20 @@ tr {
 }
 
 .third-header {
-  width: 100px;
+  width: 120px;
   display: inline;
   text-align: left;
   padding-top: 10px;
 }
 
 .fourth-header {
-  width: 150px;
+  width: 120px;
   text-align: left;
   padding-top: 10px;
 }
 
 .fifth-header {
-  width: 150px;
+  width: 120px;
   text-align: left;
   padding-top: 10px;
 }
@@ -84,18 +85,26 @@ tr {
 .right-title {
   display: flex;
   flex-direction: column;
+  align-items: flex-end;
 }
 
-button {
+.button {
   background-color: #00DBDE;
   background-image: linear-gradient(90deg, #00DBDE 0%, #FC00FF 100%);
   border: none;
   border-radius: 10px;
-  padding: 10px 5%;
+  padding: 10px;
   font-size: large;
   color: white;
   cursor: pointer;
-  margin-top: 15px;
+  height: 25px;
+  width: 25px;
+  text-align: center;
+  margin-top: 10px;
+}
+
+.button .fa-plus {
+  padding-top: 3px;
 }
 
 .modal {
