--- a/client/src/app/portfolio-view/portfolio/portfolio.component.html
+++ b/client/src/app/portfolio-view/portfolio/portfolio.component.html
@@ -7,7 +7,9 @@
       </div>
       <div class="right-title">
         <h1>My Assets</h1>
-        <button type="button" (click)="showAddModal()">Add New Coin</button>        
+        <div class="button" (click)="showAddModal()">
+          <i class="fa-solid fa-1x fa-plus"></i>
+        </div>
       </div>
     </div>
     <div class="table">
