--- a/client/src/app/portfolio-view/portfolio/portfolio-table-row/portfolio-table-row.component.css
+++ b/client/src/app/portfolio-view/portfolio/portfolio-table-row/portfolio-table-row.component.css
@@ -53,7 +53,14 @@ tr {
 }
 
 .sixth {
-  width: 20px;
-  text-align: left;
-  padding-top: 11px;
+  width: 25px;
+  height: 25px;
+  text-align: center;
+  padding-top: 7px;
+  cursor: pointer;
+}
+
+.sixth:hover {
+  background-color: #181818;
+  border-radius: 16px;
 }
