--- a/client/src/app/portfolio-view/portfolio/portfolio-table-row/portfolio-table-row.component.html
+++ b/client/src/app/portfolio-view/portfolio/portfolio-table-row/portfolio-table-row.component.html
@@ -22,7 +22,7 @@
     <p>{{ (transaction$ | async)?.pnlValue | currency:'USD':'symbol':'1.2-2' }}</p>
     <p>{{ (transaction$ | async)?.pnlPercent | number:'1.2-2' }}%</p>
   </td>
-  <td class="sixth">
-    <i class="fa-solid fa-xmark"></i>
+  <td class="sixth"  (click)="removeTransaction()">
+      <i class="fa-solid fa-xmark"></i>
   </td>
 </tr>
