--- a/client/src/app/auth/register/register.component.html
+++ b/client/src/app/auth/register/register.component.html
@@ -3,45 +3,64 @@
     <form [formGroup]="registerForm" (ngSubmit)="onSubmit()">
       <img class="logo" src="/assets/logo-white.png" alt="logo img">
       <h1>Register</h1>
+
       <label for="email">Email</label>
-      <span class="error" *ngIf="!registerForm.get('email')?.valid && registerForm.get('email')?.touched">Invalid
-        e-mail!</span>
+      <span class="error" 
+      *ngIf="!registerForm.get('email')?.valid && registerForm.get('email')?.touched"
+      >Invalid e-mail!</span>
       <div class="input">
         <i class="input-icon fa-solid fa-at"></i>
         <input id="email" type="text" placeholder="Enter Email" formControlName="email">
         <div class="input-icon"></div>
       </div>
+
       <label for="email">Username</label>
+      <span class="error" 
+      *ngIf="!registerForm.get('username')?.valid && registerForm.get('username')?.touched"
+      >Invalid username!</span>
       <div class="input">
         <i class="input-icon fa-solid fa-at"></i>
-        <input id="username" type="text" placeholder="Enter Username" formControlName="username">
+        <input id="username" type="text" 
+        placeholder="Enter Username" formControlName="username">
         <div class="input-icon"></div>
       </div>
+
       <label for="password">Password</label>
-      <span class="error" *ngIf="!registerForm.get('password')?.valid && registerForm.get('password')?.touched">Invalid
-        password!</span>
+      <span class="error" 
+      *ngIf="!registerForm.get('password')?.valid && registerForm.get('password')?.touched"
+      >Invalid password!</span>
       <div class="input">
         <i class="input-icon fa-solid fa-key"></i>
-        <input id="password" type="password" placeholder="Enter Password" formControlName="password">
+        <input id="password" type="password" 
+        placeholder="Enter Password" formControlName="password">
         <div class="input-icon"></div>
       </div>
+
       <label for="repeatPass">Repeat Password</label>
       <span class="error"
-        *ngIf="registerForm.get('rePass')?.errors?.['passwordDontMatch'] && registerForm.get('rePass')?.touched">Passwords
-        must match!</span>
-      <span class="error" *ngIf="!registerForm.get('password')?.valid && registerForm.get('password')?.touched">Invalid
-        password!</span>
+        *ngIf="registerForm.get('rePass')?.errors?.['passwordDontMatch'] 
+        && registerForm.get('rePass')?.touched"
+        >Passwords must match!</span>
+      <span class="error" 
+      *ngIf="!registerForm.get('rePass')?.valid 
+      && registerForm.get('rePass')?.touched"
+      >Invalid password!</span>
       <div class="input">
         <i class="input-icon fa-solid fa-key"></i>
-        <input id="rePass" type="password" placeholder="Repeat Password" formControlName="rePass">
+        <input id="rePass" type="password" 
+        placeholder="Repeat Password" formControlName="rePass">
         <div class="input-icon"></div>
       </div>
+
       <div class="button-div">
-        <button type="submit" class="registerbtn button" [disabled]="!registerForm.valid">Register</button>
+        <button type="submit" class="registerbtn button" 
+        [disabled]="!registerForm.valid">Register</button>
       </div>
+
       <div class="no-account">
         <p>Already have an account? <a routerLink="/auth/login">Sign in</a>.</p>
       </div>
+
     </form>
   </div>
 </div>
