--- a/client/src/app/coins-view/global-data/global-data.component.css
+++ b/client/src/app/coins-view/global-data/global-data.component.css
@@ -1,8 +1,7 @@
 .global-data-container {
   display: flex;
   flex-direction: row;
-  align-self: flex-end;
-  align-content: flex-start;
+  flex-wrap: wrap;
   justify-content: space-evenly;
   color: white;
 }
@@ -15,6 +14,7 @@
   border-radius: 10px;
   box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
   width: 260px;
+  margin-top: 15px;
 }
 
 .top-row-cap {
