--- a/client/src/app/coins-view/top-hundred/top-hundred.component.css
+++ b/client/src/app/coins-view/top-hundred/top-hundred.component.css
@@ -16,8 +16,8 @@
 
 h1 {
   text-align: center;
-  padding: 50px 0px 80px 0px;
-  text-decoration: underline;
+  padding: 20px 0px 50px 0px;
+  font-weight: 300;
 }
 
 thead {
