--- a/client/src/app/shared/header/header.component.css
+++ b/client/src/app/shared/header/header.component.css
@@ -1,6 +1,7 @@
 .navigation {
 	display: flex;
 	justify-content: center;
+	flex-wrap: wrap;
 	position: fixed;
 	top: 0;
 	width: 100%;
@@ -48,11 +49,14 @@ ul li {
 	display: flex;
 	justify-content: left;
 	text-align: center;
+	flex-wrap: wrap;
 }
 
 .right-container {
 	display: flex;
 	margin-right: 10px;
+	flex-wrap: wrap;
+	padding-bottom: 15px;
 }
 
 .right-container li {
