--- a/client/src/app/home/crypto-card/crypto-card.component.html
+++ b/client/src/app/home/crypto-card/crypto-card.component.html
@@ -10,7 +10,7 @@
       <p><span class="label">24h:</span> {{ card.price_change_percentage_24h | number:'1.2-2' }}%</p>
     </div>
     <div class="data-buttons">
-      <a class="button" href="">Details</a>
+      <a class="button" routerLink="/coins/{{card.id}}">Details</a>
     </div>
   </div>
 </div>
