--- a/client/src/app/auth/register/register.component.html
+++ b/client/src/app/auth/register/register.component.html
@@ -10,7 +10,8 @@
       >Invalid e-mail!</span>
       <div class="input">
         <i class="input-icon fa-solid fa-at"></i>
-        <input id="email" type="text" placeholder="Enter Email" formControlName="email">
+        <input id="email" type="text" 
+        placeholder="Enter Email" formControlName="email" autofocus>
         <div class="input-icon"></div>
       </div>
 
