--- a/client/src/app/coins-view/new-coins/new-coins.component.css
+++ b/client/src/app/coins-view/new-coins/new-coins.component.css
@@ -38,7 +38,7 @@ tbody {
 }
 
 #third {
-  width: 350px;
+  width: 200px;
 }
 
 #fourth {
@@ -50,23 +50,23 @@ tbody {
 }
 
 #sixth {
-  width: 80px;
+  width: 60px;
 }
 
 #seventh {
-  width: 70px;
+  width: 60px;
 }
 
 #eighth {
-  width: 80px;
+  width: 60px;
 }
 
 #ninth {
-  width: 200px;
+  width: 150px;
 }
 
 #tenth {
-  width: 200px;
+  width: 170px;
 }
 
 tr {
@@ -78,6 +78,7 @@ tr {
 }
 
 td {
+  overflow: hidden;
   vertical-align: middle;
 }
 
