--- a/client/src/app/converter-view/crypto-converter/crypto-converter.component.html
+++ b/client/src/app/converter-view/crypto-converter/crypto-converter.component.html
@@ -5,7 +5,7 @@
       <div class="top-row">
         <div class="input">
           <i class="fa-solid fa-circle-dollar-to-slot"></i>
-          <input type="text" placeholder="Enter amount" formControlName="amount" (keyup)="setAmount()">
+          <input type="text" placeholder="Enter amount" formControlName="amount" (keyup)="setAmount()" autofocus>
           <img src="" alt="" class="input-icon">
         </div>
       </div>
