--- a/client/src/app/coins-view/top-hundred/top-hundred.component.css
+++ b/client/src/app/coins-view/top-hundred/top-hundred.component.css
@@ -39,7 +39,7 @@ tbody {
 }
 
 #third {
-  width: 350px;
+  width: 200px;
 }
 
 #fourth {
@@ -51,23 +51,23 @@ tbody {
 }
 
 #sixth {
-  width: 80px;
+  width: 60px;
 }
 
 #seventh {
-  width: 70px;
+  width: 60px;
 }
 
 #eighth {
-  width: 80px;
+  width: 60px;
 }
 
 #ninth {
-  width: 200px;
+  width: 150px;
 }
 
 #tenth {
-  width: 200px;
+  width: 170px;
 }
 
 tr {
@@ -79,6 +79,7 @@ tr {
 }
 
 td {
+  overflow: hidden;
   vertical-align: middle;
 }
 
