--- a/client/src/app/coins-view/top-hundred/top-hundred.component.html
+++ b/client/src/app/coins-view/top-hundred/top-hundred.component.html
@@ -25,3 +25,6 @@
     </tbody>
   </div>
 </div>
+<div class="spinner-container" *ngIf="(isLoading$ | async)">
+  <app-loading-spinner class="spinner"></app-loading-spinner>
+</div>
