--- a/client/src/app/coins-view/new-coins/new-coins.component.html
+++ b/client/src/app/coins-view/new-coins/new-coins.component.html
@@ -24,3 +24,6 @@
     </tbody>
   </div>
 </div>
+<div class="spinner-container" *ngIf="(isLoading$ | async)">
+  <app-loading-spinner class="spinner"></app-loading-spinner>
+</div>
