--- a/client/src/app/portfolio-view/portfolio/portfolio.component.html
+++ b/client/src/app/portfolio-view/portfolio/portfolio.component.html
@@ -35,3 +35,6 @@
     <app-add-coin-modal></app-add-coin-modal>
   </div>
 </div>
+<div class="spinner-container" *ngIf="(isLoading$ | async)">
+  <app-loading-spinner class="spinner"></app-loading-spinner>
+</div>
